--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
-		"immer": "^8.0.1",
 		"eslint": "^7.22.0",
 		"eslint-plugin-react": "^7.22.0",
+		"immer": "^8.0.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-router-dom": "^5.2.0",
@@ -42,6 +42,7 @@
 		]
 	},
 	"devDependencies": {
+		"babel-eslint": "^10.1.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-prettier": "^3.3.1",
 		"prettier": "^2.2.1"
