--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"axios": "^0.21.1",
 		"base-64": "^1.0.0",
 		"lodash": "^4.17.21",
+		"material-design-icons": "^3.0.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-redux": "^7.2.4",
@@ -49,6 +50,7 @@
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-prettier": "^3.3.1",
 		"eslint-plugin-react": "^7.22.0",
+		"faker": "^5.5.3",
 		"prettier": "^2.2.1"
 	}
 }
