--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"base-64": "^1.0.0",
 		"lodash": "^4.17.21",
 		"material-design-icons": "^3.0.1",
+		"prop-types": "^15.7.2",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-redux": "^7.2.4",
