--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
+		"@types/react-table": "^7.0.19",
 		"axios": "^0.21.1",
 		"base-64": "^1.0.0",
 		"lodash": "^4.17.21",
