--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"material-design-icons": "^3.0.1",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.1",
+		"react-dnd": "^14.0.4",
 		"react-dom": "^17.0.1",
 		"react-modal": "^3.14.3",
 		"react-redux": "^7.2.4",
