--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-dom": "^17.0.1",
 		"react-modal": "^3.14.3",
 		"react-redux": "^7.2.4",
+		"react-required-if": "^1.0.3",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
 		"react-table": "^7.7.0",
