--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@hookform/error-message": "^2.0.0",
 		"@reduxjs/toolkit": "^1.6.1",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
@@ -17,6 +18,7 @@
 		"react": "^17.0.1",
 		"react-dnd": "^14.0.4",
 		"react-dom": "^17.0.1",
+		"react-hook-form": "^7.17.1",
 		"react-modal": "^3.14.3",
 		"react-redux": "^7.2.4",
 		"react-router-dom": "^5.3.0",
