--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"@hookform/error-message": "^2.0.0",
+		"@hookform/resolvers": "^2.8.2",
 		"@reduxjs/toolkit": "^1.6.1",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
@@ -25,7 +26,8 @@
 		"react-scripts": "4.0.3",
 		"react-table": "^7.7.0",
 		"styled-components": "^5.3.1",
-		"web-vitals": "^1.0.1"
+		"web-vitals": "^1.0.1",
+		"yup": "^0.32.9"
 	},
 	"scripts": {
 		"start": "react-scripts start",
