--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react-dom": "^17.0.1",
 		"react-hook-form": "^7.17.1",
 		"react-modal": "^3.14.3",
+		"react-overlays": "^5.1.1",
 		"react-redux": "^7.2.4",
 		"react-required-if": "^1.0.3",
 		"react-router-dom": "^5.3.0",
