--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-required-if": "^1.0.3",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
+		"react-select": "^5.1.0",
 		"react-table": "^7.7.0",
 		"styled-components": "^5.3.1",
 		"web-vitals": "^1.0.1",
