--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.5.0",
+		"@emotion/styled": "^11.3.0",
 		"@hookform/error-message": "^2.0.0",
 		"@hookform/resolvers": "^2.8.2",
+		"@mui/lab": "^5.0.0-alpha.51",
+		"@mui/material": "^5.0.4",
+		"@mui/styled-engine-sc": "^5.0.3",
 		"@reduxjs/toolkit": "^1.6.1",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
@@ -12,11 +17,13 @@
 		"@types/react-table": "^7.0.19",
 		"axios": "^0.21.1",
 		"base-64": "^1.0.0",
+		"date-fns": "^2.25.0",
 		"lodash": "^4.17.21",
 		"material-design-icons": "^3.0.1",
 		"prop-types": "^15.7.2",
 		"qs": "^6.10.1",
 		"react": "^17.0.1",
+		"react-dates": "^21.8.0",
 		"react-dnd": "^14.0.4",
 		"react-dom": "^17.0.1",
 		"react-hook-form": "^7.17.1",
@@ -28,7 +35,7 @@
 		"react-scripts": "4.0.3",
 		"react-select": "^5.1.0",
 		"react-table": "^7.7.0",
-		"styled-components": "^5.3.1",
+		"styled-components": "^5.3.3",
 		"web-vitals": "^1.0.1",
 		"yup": "^0.32.9"
 	},
