--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"date-fns": "^2.25.0",
 		"lodash": "^4.17.21",
 		"material-design-icons": "^3.0.1",
+		"pretty-checkbox": "^3.0.3",
 		"prop-types": "^15.7.2",
 		"qs": "^6.10.1",
 		"react": "^17.0.1",
