--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"axios": "^0.21.1",
 		"base-64": "^1.0.0",
 		"date-fns": "^2.25.0",
+		"formik": "^2.2.9",
 		"lodash": "^4.17.21",
 		"material-design-icons": "^3.0.1",
 		"pretty-checkbox": "^3.0.3",
