--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
 	"dependencies": {
 		"@emotion/react": "^11.5.0",
 		"@emotion/styled": "^11.3.0",
-		"@hookform/error-message": "^2.0.0",
-		"@hookform/resolvers": "^2.8.2",
 		"@mui/lab": "^5.0.0-alpha.51",
 		"@mui/material": "^5.0.4",
 		"@mui/styled-engine-sc": "^5.0.3",
@@ -30,7 +28,7 @@
 		"react-dates": "^21.8.0",
 		"react-dnd": "^14.0.4",
 		"react-dom": "^17.0.1",
-		"react-hook-form": "^7.17.1",
+		"react-js-pagination": "^3.0.3",
 		"react-modal": "^3.14.3",
 		"react-overlays": "^5.1.1",
 		"react-redux": "^7.2.4",
