--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"react-select": "^5.1.0",
 		"react-table": "^7.7.0",
 		"styled-components": "^5.3.3",
+		"styled-reset": "^4.3.4",
 		"web-vitals": "^1.0.1",
 		"yup": "^0.32.9"
 	},
