--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"react-scripts": "4.0.3",
 		"react-select": "^5.1.0",
 		"react-table": "^7.7.0",
+		"react-window": "^1.8.6",
 		"styled-components": "^5.3.3",
 		"styled-reset": "^4.3.4",
 		"web-vitals": "^1.0.1",
