--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
 		"react-select": "^5.1.0",
 		"react-table": "^7.7.0",
 		"react-window": "^1.8.6",
+		"redux-persist": "^6.0.0",
+		"redux-persist-transform-filter": "0.0.20",
 		"styled-components": "^5.3.3",
 		"styled-reset": "^4.3.4",
 		"web-vitals": "^1.0.1",
