--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"date-fns": "^2.25.0",
 		"formik": "^2.2.9",
 		"formik-error-focus": "^1.1.0",
+		"lerna": "^4.0.0",
 		"lodash": "^4.17.21",
 		"material-design-icons": "^3.0.1",
 		"pretty-checkbox": "^3.0.3",
