--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"lerna": "^4.0.0",
 		"lodash": "^4.17.21",
 		"material-design-icons": "^3.0.1",
+		"moment": "^2.29.1",
 		"node-sass": "^5.0.0",
 		"pretty-checkbox": "^3.0.3",
 		"prop-types": "^15.7.2",
