--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 	"dependencies": {
 		"@emotion/react": "^11.5.0",
 		"@emotion/styled": "^11.3.0",
+		"@hookform/error-message": "^2.0.0",
+		"@hookform/resolvers": "^2.8.8",
 		"@mui/lab": "^5.0.0-alpha.51",
 		"@mui/material": "^5.0.4",
 		"@mui/styled-engine-sc": "^5.0.3",
@@ -16,6 +18,7 @@
 		"axios": "^0.21.1",
 		"base-64": "^1.0.0",
 		"date-fns": "^2.25.0",
+		"focus-formik-error": "^1.1.0",
 		"formik": "^2.2.9",
 		"formik-error-focus": "^1.1.0",
 		"http-proxy-middleware": "^2.0.1",
@@ -34,6 +37,7 @@
 		"react-dates": "^21.8.0",
 		"react-dnd": "^14.0.4",
 		"react-dom": "^17.0.1",
+		"react-hook-form": "^7.28.1",
 		"react-idle-timer": "^4.6.4",
 		"react-js-pagination": "^3.0.3",
 		"react-modal": "^3.14.3",
