--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@types/react-table": "^7.0.19",
 		"axios": "^0.21.1",
 		"base-64": "^1.0.0",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
 		"date-fns": "^2.25.0",
 		"focus-formik-error": "^1.1.0",
 		"formik": "^2.2.9",
@@ -25,6 +27,7 @@
 		"lerna": "^4.0.0",
 		"lodash": "^4.17.21",
 		"material-design-icons": "^3.0.1",
+		"mkcert": "^1.5.0",
 		"moment": "^2.29.1",
 		"node-sass": "^5.0.0",
 		"pretty-checkbox": "^3.0.3",
@@ -33,7 +36,6 @@
 		"react": "^17.0.1",
 		"react-beautiful-dnd": "^13.1.0",
 		"react-contexify": "^5.0.0",
-		"react-cookie": "^4.1.1",
 		"react-dates": "^21.8.0",
 		"react-dnd": "^14.0.4",
 		"react-dom": "^17.0.1",
@@ -52,6 +54,7 @@
 		"redux-persist": "^6.0.0",
 		"redux-persist-transform-filter": "0.0.20",
 		"styled-components": "^5.3.3",
+		"universal-cookie": "^4.0.4",
 		"web-vitals": "^1.0.1",
 		"yup": "^0.32.9"
 	},
