--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
-REACT_APP_AUTH_URL = http://ec2-3-36-116-0.ap-northeast-2.compute.amazonaws.com:10200
-REACT_APP_OPEN_API _URL = http://ec2-3-34-138-163.ap-northeast-2.compute.amazonaws.com:10200
+REACT_APP_AUTH_URL=http://ec2-3-36-116-0.ap-northeast-2.compute.amazonaws.com:10200
+REACT_APP_OPEN_API_URL=http://ec2-3-34-138-163.ap-northeast-2.compute.amazonaws.com:10200
+REACT_APP_GOOGLE_CLIENT_ID=819744979674-dastdmj1j5k8coluu2vofclsi3kvo90h.apps.googleusercontent.com
+REACT_APP_NAVER_CLIENT_ID=nibcTe6r62XwD6twI7P7
+REACT_APP_KAKAO_CLIENT_ID=a802adefbb7e61bb24cae3f135d62007
+REACT_APP_GOOGLE_CLIENT_SECRET=LEVTqM7nBsyLPuSEbT-mPffx
+REACT_APP_NAVER_CLIENT_SECRET=zYvSY9g2pF
+REACT_APP_KAKAO_CLIENT_SECRET=test
+REACT_APP_BASIC_AUTHORIZATION_ID=web
+REACT_APP_BASIC_AUTHORIZATION_PASSWORD=123456789
